// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test TaskBucketByPrio component Should renders TaskBucketByPrio correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#EFD469",
      "borderColor": "#848484",
      "borderRadius": 5,
      "borderWidth": 1,
      "height": 120,
      "marginBottom": "3%",
      "marginTop": 5,
      "opacity": 1,
      "paddingBottom": "8%",
      "paddingTop": "4%",
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#EFD469",
        },
        Object {
          "backgroundColor": "#EFD469",
          "paddingLeft": 15,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#fff",
          },
          Object {
            "fontFamily": "Lexend-SemiBold",
            "fontSize": 15,
            "fontWeight": "bold",
          },
        ]
      }
    >
      4. These are for spare time
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#EFD469",
        },
        Object {
          "paddingBottom": "2%",
          "paddingLeft": "10%",
          "paddingTop": "6%",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#fff",
          },
          Object {
            "fontFamily": "Lexend-Regular",
            "fontSize": 13,
          },
        ]
      }
    >
      test5
    </Text>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#EFD469",
          },
          Object {
            "position": "absolute",
            "right": 15,
            "top": -18,
          },
        ]
      }
    >
      <Image
        source={1}
        style={
          Object {
            "height": 18,
            "width": 18,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Test TaskBucketByPrio component Should renders TaskBucketByPrio correctly 2`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FEFEF8",
      },
      Object {
        "borderColor": "#848484",
        "borderRadius": 5,
        "borderWidth": 1,
        "height": 120,
        "marginBottom": "3%",
        "marginTop": 5,
        "paddingBottom": "8%",
        "paddingTop": "4%",
        "width": "100%",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FEFEF8",
        },
        Object {
          "paddingLeft": 15,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#848484",
          },
          Object {
            "fontFamily": "Lexend-SemiBold",
            "fontSize": 15,
            "fontWeight": "bold",
          },
        ]
      }
    >
      3. These can wait a bit
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FEFEF8",
        },
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingTop": "9.5%",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#848484",
          },
          Object {
            "fontFamily": "Lexend-Regular",
            "fontSize": 12,
          },
        ]
      }
    >
      No tasks in this list
    </Text>
  </View>
</View>
`;

exports[`Test TaskBucketByPrio component Should renders TaskBucketByPrio correctly 3`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#D3B53D",
      "borderColor": "#848484",
      "borderRadius": 5,
      "borderWidth": 1,
      "height": 120,
      "marginBottom": "3%",
      "marginTop": 5,
      "opacity": 1,
      "paddingBottom": "8%",
      "paddingTop": "4%",
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#D3B53D",
        },
        Object {
          "backgroundColor": "#D3B53D",
          "paddingLeft": 15,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#fff",
          },
          Object {
            "fontFamily": "Lexend-SemiBold",
            "fontSize": 15,
            "fontWeight": "bold",
          },
        ]
      }
    >
      2. Sort these important things out
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#D3B53D",
        },
        Object {
          "paddingBottom": "2%",
          "paddingLeft": "10%",
          "paddingTop": "6%",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#fff",
          },
          Object {
            "fontFamily": "Lexend-Regular",
            "fontSize": 13,
          },
        ]
      }
    >
      test3
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#fff",
          },
          Object {
            "fontFamily": "Lexend-Regular",
            "fontSize": 13,
            "paddingTop": 5,
            "textDecorationLine": "underline",
          },
        ]
      }
    >
      + 1 more
    </Text>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#D3B53D",
          },
          Object {
            "position": "absolute",
            "right": 15,
            "top": -18,
          },
        ]
      }
    >
      <Image
        source={1}
        style={
          Object {
            "height": 18,
            "width": 18,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Test TaskBucketByPrio component Should renders TaskBucketByPrio correctly 4`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#BCA136",
      "borderColor": "#848484",
      "borderRadius": 5,
      "borderWidth": 1,
      "height": 120,
      "marginBottom": "3%",
      "marginTop": 5,
      "opacity": 1,
      "paddingBottom": "8%",
      "paddingTop": "4%",
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#BCA136",
        },
        Object {
          "backgroundColor": "#BCA136",
          "paddingLeft": 15,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#fff",
          },
          Object {
            "fontFamily": "Lexend-SemiBold",
            "fontSize": 15,
            "fontWeight": "bold",
          },
        ]
      }
    >
      1. Do these before anything else
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#BCA136",
        },
        Object {
          "paddingBottom": "2%",
          "paddingLeft": "10%",
          "paddingTop": "6%",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#fff",
          },
          Object {
            "fontFamily": "Lexend-Regular",
            "fontSize": 13,
          },
        ]
      }
    >
      Test1
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#fff",
          },
          Object {
            "fontFamily": "Lexend-Regular",
            "fontSize": 13,
            "paddingTop": 5,
            "textDecorationLine": "underline",
          },
        ]
      }
    >
      + 1 more
    </Text>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#BCA136",
          },
          Object {
            "position": "absolute",
            "right": 15,
            "top": -18,
          },
        ]
      }
    >
      <Image
        source={1}
        style={
          Object {
            "height": 18,
            "width": 18,
          }
        }
      />
    </View>
  </View>
</View>
`;
